{
    "name": "NewControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "8cc9b362-bfe3-432e-9576-a74a9bc8d23e",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5a3b287a-86f2-456c-87ff-0f0a614799a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "e1ce24c4-145a-44cd-b936-610339e6bc3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dogde",
                    "type": "Button",
                    "id": "bb122ec1-13f4-4c6a-ae19-c6dcd7381a14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "995766e9-7c4d-4768-8928-0f0a10d683f9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "aa69c326-2dbb-4efa-933e-83e60b372091",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "49c344b0-b618-445a-87b4-b72033db6114",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "228f9810-c05d-4dd3-869a-33cb8aaf8566",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "a37514f0-3cf6-4e5d-8c84-e0d242ff7fea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Secondary",
                    "type": "Button",
                    "id": "50722d5e-60e4-45c5-a9c5-a3e85da8071e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "7c9bd8f4-0c59-4f2b-855f-aeb9530393c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sealth/Unsealth",
                    "type": "Button",
                    "id": "e53cc2b9-82f5-4020-9213-c262b3299c5a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "e86b4568-c8f9-4689-a335-d382c11dd5b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "fb93b089-5570-4ada-994d-a0e648fed94f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "1d78cf12-2dfb-46b6-86a8-83872047d750",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "fe8e9ac4-acee-44e1-b6d4-455938ccf6fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill4",
                    "type": "Button",
                    "id": "e5d94bcf-6829-4c22-b9da-337fba7b8558",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "17cce1a0-2d43-4b77-97b5-6eefc057ee25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "3982981a-3587-4b7a-9d74-11a6fd23a1d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillPanel",
                    "type": "Button",
                    "id": "23470cf6-d5de-4dac-b688-5b58f3379bdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DungeonDescript",
                    "type": "Button",
                    "id": "14eb9b33-7b50-43c2-b39e-159408c90b7b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dialoge",
                    "type": "Button",
                    "id": "eb1767d8-c29b-4bc2-9e5e-9f2a490a94a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EcsMode",
                    "type": "Button",
                    "id": "662c6f60-529c-4a14-b592-31d215c3c123",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMode",
                    "type": "Button",
                    "id": "70215e14-e40c-48b6-9a3f-c0da278ebbad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "f049eb2d-8d0e-4c06-969c-9e35302b7cbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "74f75f58-43e7-4074-8ddc-4ce26e0b3155",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StatBoard",
                    "type": "Button",
                    "id": "22cf53a2-7e49-43e1-bd4f-796b34a985a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1dcd18ad-e1a1-4ffe-9307-9c8bc7481d07",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3082fe98-7813-4f3b-bd15-e12235d0d524",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Dogde",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53e31924-4965-48b1-840a-fd13ecebad98",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c75b3397-35a4-43cd-9dcb-2c1209f75051",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecc3d8ef-ec34-4160-a9c3-fbbe51515c58",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cb6d001-9333-45b6-b76b-922328b16d23",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d3874fa-6a0b-4d97-8494-6a240921d021",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c897549e-507d-483e-aab7-3c95b146f4b9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Secondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d82b85-1d52-4ce8-aab0-249ccbb346a1",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85532dc5-b264-433a-b83b-aa22b15001a4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Sealth/Unsealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68d99e8f-610a-4574-a4ad-2afed75c729f",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba61f751-18fb-4a65-9e48-4cfa9cd3e194",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c969213-4762-447b-a2f3-6eb13ab09ad2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e66140f-a4ec-4f26-b89b-7ad69d97e7ad",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b87f588-58c7-48e9-9ea8-8fc87cfa22b9",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c9f5eee-9e8a-4a9a-963c-608bfc2360cc",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd558b2c-321e-4a81-9c6c-a85f0860ca56",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "SkillPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a660d39-352a-4033-b6d6-ddc6d9a41188",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "DungeonDescript",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "796d5330-6c37-41f2-84d8-8dbf933be22a",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Dialoge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f3e7ef7-fea7-4562-8af7-02feec1f201a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EcsMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cca4d5df-e487-4074-97c3-e8e165a2ddc1",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f63e4c5f-1af0-4102-a260-4c759fc138f0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4761842f-6405-4ad0-87b0-8d8ae474c7ec",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2c11c733-0211-407c-9f5a-a4f04360995d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7499b41c-c448-4a80-be6d-4f6365a04e3f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c1b2bac1-f019-4e38-ba35-b6ed88e67e3a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9fe6c78-3275-469b-bb7a-a255c834d485",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e20e67-b812-4199-a4be-33d8a3a3383a",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "StatBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8893f53f-20cc-4d7c-8940-f0e287c0336b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "MouseMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "024c844a-1439-4ae7-8f5b-594effd97b83",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mouse & Keyboard",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse & Keyboard",
            "bindingGroup": "Mouse & Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}